fixed fucking .inTrip on small displays

--- a/static/less/offer/sale/list.less
+++ b/static/less/offer/sale/list.less
@@ -233,6 +233,7 @@
             }
 
             .inTrip {
+                display: inline-block;
                 padding-left: 10px;
                 i {
                     color: #3b90a5;
